--- a/index.html
+++ b/index.html
@@ -369,15 +369,15 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
-                        <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Дома </a>
-                          <a href="#" class="maximenuck_box_item">Баня </a>
-                          <a href="#" class="maximenuck_box_item">Сарай (хоз постройка) </a>
-                          <a href="#" class="maximenuck_box_item">Кровля </a>
-                          <a href="#" class="maximenuck_box_item">Фундамент </a>
-                          <a href="#" class="maximenuck_box_item">Заборы </a>
-                          <a href="#" class="maximenuck_box_item">Металоконстркуция </a>
-                        </div>
+                            <div class="maximenuck_box">
+                              <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+                              <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+                              <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+                              <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+                              <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+                              <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+                              <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
+                            </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Алмазная резка</span><i><svg
