--- a/wall.html
+++ b/wall.html
@@ -321,22 +321,22 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Стены (перегородки) </a>
-                          <a href="#" class="maximenuck_box_item">Плитка </a>
-                          <a href="#" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
-                          <a href="#" class="maximenuck_box_item">Обои</a>
-                          <a href="#" class="maximenuck_box_item">Краска </a>
-                          <a href="#" class="maximenuck_box_item">Полы (стяжка) </a>
-                          <a href="#" class="maximenuck_box_item">Паркет (ламинат) </a>
-                          <a href="#" class="maximenuck_box_item">Ковролин </a>
-                          <a href="#" class="maximenuck_box_item">Линолиум </a>
-                          <a href="#" class="maximenuck_box_item">Потолок </a>
-                          <a href="#" class="maximenuck_box_item">Окна</a>
-                          <a href="#" class="maximenuck_box_item">Двери</a>
-                          <a href="#" class="maximenuck_box_item">Сантехника </a>
-                          <a href="#" class="maximenuck_box_item">Электрика</a>
-                          <a href="#" class="maximenuck_box_item">Оборудование </a>
-                          <a href="#" class="maximenuck_box_item">Мебель </a>
+                          <a href="./wall.html" class="maximenuck_box_item">Стены (перегородки) </a>
+                          <a href="./floor.html#plitka" class="maximenuck_box_item">Плитка </a>
+                          <a href="./wall.html#shtukaturka" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+                          <a href="./wall.html#oboi" class="maximenuck_box_item">Обои</a>
+                          <a href="./floor.html#kraska" class="maximenuck_box_item">Краска </a>
+                          <a href="./floor.html" class="maximenuck_box_item">Полы (стяжка) </a>
+                          <a href="./floor.html#parket" class="maximenuck_box_item">Паркет (ламинат) </a>
+                          <a href="./floor.html#kovrolin" class="maximenuck_box_item">Ковролин </a>
+                          <a href="./floor.html#linolium" class="maximenuck_box_item">Линолиум </a>
+                          <a href="./ceiling.html" class="maximenuck_box_item">Потолок </a>
+                          <a href="./window.html#okna" class="maximenuck_box_item">Окна</a>
+                          <a href="./window.html#dveri" class="maximenuck_box_item">Двери</a>
+                          <a href="./window.html#santechnika" class="maximenuck_box_item">Сантехника </a>
+                          <a href="./window.html#elektrika" class="maximenuck_box_item">Электрика</a>
+                          <a href="./window.html#oborudovanie" class="maximenuck_box_item">Оборудование </a>
+                          <a href="./window.html#mebel" class="maximenuck_box_item">Мебель </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck level1">
@@ -350,15 +350,15 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
-                        <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Дома </a>
-                          <a href="#" class="maximenuck_box_item">Баня </a>
-                          <a href="#" class="maximenuck_box_item">Сарай (хоз постройка) </a>
-                          <a href="#" class="maximenuck_box_item">Кровля </a>
-                          <a href="#" class="maximenuck_box_item">Фундамент </a>
-                          <a href="#" class="maximenuck_box_item">Заборы </a>
-                          <a href="#" class="maximenuck_box_item">Металоконстркуция </a>
-                        </div>
+                            <div class="maximenuck_box">
+                              <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+                              <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+                              <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+                              <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+                              <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+                              <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+                              <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
+                            </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Алмазная резка</span><i><svg
@@ -372,16 +372,16 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Алмазная резка </a>
-                          <a href="#" class="maximenuck_box_item">Усиление </a>
-                          <a href="#" class="maximenuck_box_item">Штробление </a>
+                          <a href="./diamond.html" class="maximenuck_box_item">Алмазная резка </a>
+                          <a href="./diamond.html#usilenie" class="maximenuck_box_item">Усиление </a>
+                          <a href="./diamond.html#shtroblenie" class="maximenuck_box_item">Штробление </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1 "><a class="maximenuck "
-                          href="/steny-pol-potolok.html"><span class="titreck">Алмазное бурение</span></a>
+                          href="./diamond.html#burenie"><span class="titreck">Алмазное бурение</span></a>
                       </li>
                       <li data-level="1" class="maximenuck  level1"><a class="maximenuck "
-                          href="/steny-pol-potolok.html#tab2"><span class="titreck">Перепланировка</span></a>
+                          href="./redevelopment.html"><span class="titreck">Перепланировка</span></a>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Вывоз мусора</span><i><svg
@@ -395,9 +395,9 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Наш автопарк </a>
-                          <a href="#" class="maximenuck_box_item">Фасовка мусора </a>
-                          <a href="#" class="maximenuck_box_item">Спуск и погрузка мусора </a>
+                          <a href="./garbage.html" class="maximenuck_box_item">Наш автопарк </a>
+                          <a href="./garbage.html#fasovka" class="maximenuck_box_item">Фасовка мусора </a>
+                          <a href="./garbage.html#spusk" class="maximenuck_box_item">Спуск и погрузка мусора </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
@@ -412,10 +412,10 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">Фото</a>
-                          <a href="#" class="maximenuck_box_item">Видео </a>
+                          <a href="./contact.html#foto" class="maximenuck_box_item">Фото</a>
+                          <a href="./contact.html#video" class="maximenuck_box_item">Видео </a>
                           <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
-                          <a href="#" class="maximenuck_box_item">Контакты </a>
+                          <a href="./contact.html#contact" class="maximenuck_box_item">Контакты </a>
                         </div>
                       </li>
                     </ul>
@@ -430,7 +430,6 @@
       </div>
     </div>
   </header>
-
 
   <section id="cyb-main">
     <div class="container">
