--- a/garbage.html
+++ b/garbage.html
@@ -31,10 +31,10 @@
       <div class="mobilemaximenucktitle mobilemaximenuckbackbutton" style="display: none;">Назад</div><span
         class="mobilemaximenucktitle">Меню</span><span class="mobilemaximenuckclose js_close">×</span>
     </div>
-    <div class="mobilemaximenuckitemwrap" style="position: absolute; width: 100%;">
+    <div class="mobilemaximenuckitemwrap acc" style="position: absolute; width: 100%;">
       <div class="mobilemaximenuckitem">
         <div class="maximenuck level1">
-          <div class="maximenuck_item_mobile">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Демонтажные работы</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -46,11 +46,29 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./wall.html" class="maximenuck_box_item">Стены (перегородки) </a>
+            <a href="./floor.html#plitka" class="maximenuck_box_item">Плитка </a>
+            <a href="./wall.html#shtukaturka" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+            <a href="./wall.html#oboi" class="maximenuck_box_item">Обои</a>
+            <a href="./floor.html#kraska" class="maximenuck_box_item">Краска </a>
+            <a href="./floor.html" class="maximenuck_box_item">Полы (стяжка) </a>
+            <a href="./floor.html#parket" class="maximenuck_box_item">Паркет (ламинат) </a>
+            <a href="./floor.html#kovrolin" class="maximenuck_box_item">Ковролин </a>
+            <a href="./floor.html#linolium" class="maximenuck_box_item">Линолиум </a>
+            <a href="./ceiling.html" class="maximenuck_box_item">Потолок </a>
+            <a href="./window.html#okna" class="maximenuck_box_item">Окна</a>
+            <a href="./window.html#dveri" class="maximenuck_box_item">Двери</a>
+            <a href="./window.html#santechnika" class="maximenuck_box_item">Сантехника </a>
+            <a href="./window.html#elektrika" class="maximenuck_box_item">Электрика</a>
+            <a href="./window.html#oborudovanie" class="maximenuck_box_item">Оборудование </a>
+            <a href="./window.html#mebel" class="maximenuck_box_item">Мебель </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Снос домов</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -62,11 +80,20 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+            <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+            <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+            <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+            <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+            <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+            <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Алмазная резка</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -78,6 +105,11 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./diamond.html" class="maximenuck_box_item">Алмазная резка </a>
+            <a href="./diamond.html#usilenie" class="maximenuck_box_item">Усиление </a>
+            <a href="./diamond.html#shtroblenie" class="maximenuck_box_item">Штробление </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
@@ -85,12 +117,12 @@
               class="mobiletextck">Алмазное бурение</span></a></div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
+        <div class="maximenuck level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
               class="mobiletextck">Перепланировка</span></a></div>
       </div>
       <div class="mobilemaximenuckitem">
         <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Вывоз мусора</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -102,11 +134,16 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./garbage.html" class="maximenuck_box_item">Наш автопарк </a>
+            <a href="./garbage.html#fasovka" class="maximenuck_box_item">Фасовка мусора </a>
+            <a href="./garbage.html#spusk" class="maximenuck_box_item">Спуск и погрузка мусора </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Наши работы</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -117,6 +154,12 @@
                     fill="#222" opacity="1" data-original="#000000"></path>
                 </g>
               </svg></i>
+          </div>
+          <div class="maximenuck_body">
+            <a href="./contact.html#foto" class="maximenuck_box_item">Фото</a>
+            <a href="./contact.html#video" class="maximenuck_box_item">Видео </a>
+            <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
+            <a href="./contact.html#contact" class="maximenuck_box_item">Контакты </a>
           </div>
         </div>
       </div>
@@ -1010,7 +1053,7 @@
     </div>
   </section>
 
-  <section class="review">
+  <section class="review" id="review">
     <div class="container">
       <h2>Отзывы клиентов</h2>
       <table class="review">
