--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       <div class="mobilemaximenucktitle mobilemaximenuckbackbutton" style="display: none;">Назад</div><span
         class="mobilemaximenucktitle">Меню</span><span class="mobilemaximenuckclose js_close">×</span>
     </div>
-    <div class="mobilemaximenuckitemwrap" style="position: absolute; width: 100%;">
+    <div class="mobilemaximenuckitemwrap acc" style="position: absolute; width: 100%;">
       <div class="mobilemaximenuckitem">
         <div class="maximenuck level1">
-          <div class="maximenuck_item_mobile">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Демонтажные работы</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -65,11 +65,29 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./wall.html" class="maximenuck_box_item">Стены (перегородки) </a>
+            <a href="./floor.html#plitka" class="maximenuck_box_item">Плитка </a>
+            <a href="./wall.html#shtukaturka" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+            <a href="./wall.html#oboi" class="maximenuck_box_item">Обои</a>
+            <a href="./floor.html#kraska" class="maximenuck_box_item">Краска </a>
+            <a href="./floor.html" class="maximenuck_box_item">Полы (стяжка) </a>
+            <a href="./floor.html#parket" class="maximenuck_box_item">Паркет (ламинат) </a>
+            <a href="./floor.html#kovrolin" class="maximenuck_box_item">Ковролин </a>
+            <a href="./floor.html#linolium" class="maximenuck_box_item">Линолиум </a>
+            <a href="./ceiling.html" class="maximenuck_box_item">Потолок </a>
+            <a href="./window.html#okna" class="maximenuck_box_item">Окна</a>
+            <a href="./window.html#dveri" class="maximenuck_box_item">Двери</a>
+            <a href="./window.html#santechnika" class="maximenuck_box_item">Сантехника </a>
+            <a href="./window.html#elektrika" class="maximenuck_box_item">Электрика</a>
+            <a href="./window.html#oborudovanie" class="maximenuck_box_item">Оборудование </a>
+            <a href="./window.html#mebel" class="maximenuck_box_item">Мебель </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Снос домов</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -81,11 +99,20 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+            <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+            <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+            <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+            <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+            <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+            <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Алмазная резка</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -97,6 +124,11 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./diamond.html" class="maximenuck_box_item">Алмазная резка </a>
+            <a href="./diamond.html#usilenie" class="maximenuck_box_item">Усиление </a>
+            <a href="./diamond.html#shtroblenie" class="maximenuck_box_item">Штробление </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
@@ -104,12 +136,12 @@
               class="mobiletextck">Алмазное бурение</span></a></div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
+        <div class="maximenuck level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
               class="mobiletextck">Перепланировка</span></a></div>
       </div>
       <div class="mobilemaximenuckitem">
         <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Вывоз мусора</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -121,11 +153,16 @@
                 </g>
               </svg></i>
           </div>
+          <div class="maximenuck_body">
+            <a href="./garbage.html" class="maximenuck_box_item">Наш автопарк </a>
+            <a href="./garbage.html#fasovka" class="maximenuck_box_item">Фасовка мусора </a>
+            <a href="./garbage.html#spusk" class="maximenuck_box_item">Спуск и погрузка мусора </a>
+          </div>
         </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile acc_header">
             <span class="mobiletextck">Наши работы</span>
             <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                 width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
@@ -136,6 +173,12 @@
                     fill="#222" opacity="1" data-original="#000000"></path>
                 </g>
               </svg></i>
+          </div>
+          <div class="maximenuck_body">
+            <a href="./contact.html#foto" class="maximenuck_box_item">Фото</a>
+            <a href="./contact.html#video" class="maximenuck_box_item">Видео </a>
+            <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
+            <a href="./contact.html#contact" class="maximenuck_box_item">Контакты </a>
           </div>
         </div>
       </div>
@@ -369,15 +412,16 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
-                            <div class="maximenuck_box">
-                              <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
-                              <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
-                              <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
-                              <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
-                              <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
-                              <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
-                              <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
-                            </div>
+                        <div class="maximenuck_box">
+                          <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+                          <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+                          <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+                          <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+                          <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+                          <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+                          <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция
+                          </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Алмазная резка</span><i><svg
@@ -469,103 +513,102 @@
       <div class="block-one_flex">
         <div class="moduletable top-one">
           <div class="custom top-one">
-            <h4><a href="#">Демонтаж стен, перегородок</a></h4>
+            <h4><a href="./wall.html">Демонтаж стен, перегородок</a></h4>
             <div class="block-one_flex_tab">
-              <a href="#">КИРПИЧ</a>
-              <a href="#">ГКЛ</a>
-              <a href="#">ДЕРЕВО</a>
-              <a href="#">БЛОКИ</a>
-              <a href="#">БЕТОН</a>
-              <a href="#">ШТУКАТУРКА</a>
-              <a href="#">ПЛИТКА</a>
-              <a href="#">КРАСКА</a>
-              <a href="#">ОБОИ</a>
+              <a href="./wall.html#kirpich">КИРПИЧ</a>
+              <a href="./wall.html">ГКЛ</a>
+              <a href="./wall.html#derevo">ДЕРЕВО</a>
+              <a href="./wall.html#bloki">БЛОКИ</a>
+              <a href="./wall.html#beton">БЕТОН</a>
+              <a href="./wall.html#shtukaturka">ШТУКАТУРКА</a>
+              <a href="./wall.html#plitka">ПЛИТКА</a>
+              <a href="./wall.html#kraska">КРАСКА</a>
+              <a href="./wall.html#oboi">ОБОИ</a>
             </div>
             <p><a href="#"><img src="./images/services/6.jpg" alt="img"></a>
             </p>
-            <p><a href="#">Фото и видео наших работ</a></p>
-            <p><a href="#">Отзывы</a></p>
+            <p><a href="./contact.html#foto">Фото и видео наших работ</a></p>
+            <p><a href="./wall.html#review">Отзывы</a></p>
           </div>
         </div>
         <div class="moduletable top-one">
           <div class="custom top-one">
-            <h4><a href="#"> Демонтаж пола, стяжки</a></h4>
+            <h4><a href="./floor.html"> Демонтаж пола, стяжки</a></h4>
             <div class="block-one_flex_tab">
-              <a href="#">СТЯЖКА</a>
-              <a href="#">ДЕРЕВО</a>
-              <a href="#">БЕТОН</a>
-              <a href="#">ПЛИТКА</a>
-              <a href="#">ПАРКЕТ</a>
-              <a href="#">ЛАМИНАТ</a>
-              <a href="#">КОВРОЛИН</a>
-              <a href="#">ЛЕНОЛИУМ</a>
+              <a href="./floor.html#stajgka">СТЯЖКА</a>
+              <a href="./floor.html#derevo">ДЕРЕВО</a>
+              <a href="./floor.html#beton">БЕТОН</a>
+              <a href="./floor.html#plitka">ПЛИТКА</a>
+              <a href="./floor.html#parket">ПАРКЕТ</a>
+              <a href="./floor.html#laminat">ЛАМИНАТ</a>
+              <a href="./floor.html#kovrolin">КОВРОЛИН</a>
+              <a href="./floor.html#linolium">ЛЕНОЛИУМ</a>
             </div>
             <p><a href="#"><img src="./images/services/4.jpg" alt="img"></a>
             </p>
-            <p><a href="#">Фото и видео наших работ</a></p>
-            <p><a href="#">Отзывы</a></p>
+            <p><a href="./contact.html#foto">Фото и видео наших работ</a></p>
+            <p><a href="./floor.html#review">Отзывы</a></p>
           </div>
         </div>
         <div class="moduletable top-one">
           <div class="custom top-one">
-            <h4><a href="#">Демонтаж потолка</a></h4>
+            <h4><a href="./ceiling.html">Демонтаж потолка</a></h4>
             <div class="block-one_flex_tab">
-              <a href="#">ГКЛ</a>
-              <a href="#">ДЕРЕВО</a>
-              <a href="#">БЕТОН</a>
-              <a href="#">ШТУКАТУРКА</a>
-              <a href="#">ПЛИТКА</a>
-              <a href="#">КРАСКА</a>
-              <a href="#">ОБОИ</a>
+              <a href="./ceiling.html#gkl">ГКЛ</a>
+              <a href="./ceiling.html#derevo">ДЕРЕВО</a>
+              <a href="./ceiling.html#beton">БЕТОН</a>
+              <a href="./ceiling.html#shtukaturka">ШТУКАТУРКА</a>
+              <a href="./ceiling.html#plitka">ПЛИТКА</a>
+              <a href="./ceiling.html#kraska">КРАСКА</a>
+              <a href="./ceiling.html#oboi">ОБОИ</a>
             </div>
-            <p><a href="#"><img src="./images/services/5.jpg" alt="img"></a></p>
-            <p><a href="#">Фото и видео наших работ</a></p>
-            <p><a href="#">Отзывы</a></p>
+            <p><a href="./ceiling.html"><img src="./images/services/5.jpg" alt="img"></a></p>
+            <p><a href="./contact.html#foto">Фото и видео наших работ</a></p>
+            <p><a href="./ceiling.html#review">Отзывы</a></p>
           </div>
         </div>
         <div class="moduletable top-one">
           <div class="custom top-one">
-            <h4><a href="#">Снос домов</a></h4>
+            <h4><a href="./demolition.html">Снос домов</a></h4>
             <div class="block-one_flex_tab">
-              <a href="#">ДОМА</a>
-              <a href="#">БАНЯ</a>
-              <a href="#">САРАЙ</a>
-              <a href="#">КРОВЛЯ</a>
-              <a href="#">ФУНДАМЕНТ</a>
-              <a href="#">ЗАБОРЫ</a>
-              <a href="#">МЕТАЛЛОКОНСТРУКЦИЯ</a>
+              <a href="./demolition.html#doma">ДОМА</a>
+              <a href="./demolition.html#bani">БАНЯ</a>
+              <a href="./demolition.html#sarai">САРАЙ</a>
+              <a href="./demolition.html#krovlay">КРОВЛЯ</a>
+              <a href="./demolition.html#fundament">ФУНДАМЕНТ</a>
+              <a href="./demolition.html#zabor">ЗАБОРЫ</a>
+              <a href="./demolition.html#metalokonstrukcia">МЕТАЛЛОКОНСТРУКЦИЯ</a>
             </div>
-            <p><a href="#"><img src="./images/services/2.jpg" alt="img"></a></p>
-            <p><a href="#">Фото и видео наших работ</a></p>
-            <p><a href="#">Отзывы</a></p>
+            <p><a href="./demolition.html"><img src="./images/services/2.jpg" alt="img"></a></p>
+            <p><a href="./contact.html#foto">Фото и видео наших работ</a></p>
+            <p><a href="./demolition.html#review">Отзывы</a></p>
           </div>
         </div>
         <div class="moduletable top-one">
           <div class="custom top-one">
-            <h4><a href="#">Алмазная резка и бурение, усиление </a></h4>
+            <h4><a href="./diamond.html">Алмазная резка и бурение, усиление </a></h4>
             <div class="block-one_flex_tab">
-              <a href="#">РЕЗКА</a>
-              <a href="#">БУРЕНИЕ</a>
-              <a href="#">ШТРОБЛЕНИЕ</a>
-              <a href="#">УСИЛЕНИЕ</a>
+              <a href="./diamond.html#rezka">РЕЗКА</a>
+              <a href="./diamond.html#burenie">БУРЕНИЕ</a>
+              <a href="./diamond.html#shtroblenie">ШТРОБЛЕНИЕ</a>
+              <a href="./diamond.html#usilenie">УСИЛЕНИЕ</a>
             </div>
-            <p><a href="#"><img src="./images/services/1.jpg" alt="img"></a></p>
-            <p><a href="#">Фото и видео наших работ</a></p>
-            <p><a href="#">Отзывы</a></p>
+            <p><a href="./diamond.html"><img src="./images/services/1.jpg" alt="img"></a></p>
+            <p><a href="./contact.html#foto">Фото и видео наших работ</a></p>
+            <p><a href="./diamond.html#review">Отзывы</a></p>
           </div>
         </div>
         <div class="moduletable top-one">
           <div class="custom top-one">
-            <h4><a href="#">Погрузка и вывоз мусора</a></h4>
+            <h4><a href="./garbage.html">Погрузка и вывоз мусора</a></h4>
             <div class="block-one_flex_tab">
-              <a href="#">ВЫВОЗ МУСОРА</a>
-              <a href="#">ФАСОВКА</a>
-              <a href="#">СПУСК</a>
-              <a href="#">ПОГРУЗКА</a>
+              <a href="./garbage.html">ВЫВОЗ МУСОРА</a>
+              <a href="./garbage.html#fasovka">ФАСОВКА</a>
+              <a href="./garbage.html#spusk">СПУСК</a>
             </div>
-            <p><a href="#"><img src="./images/services/3.jpg" alt="img"></a></p>
-            <p><a href="#">Фото и видео наших работ</a></p>
-            <p><a href="#">Отзывы</a></p>
+            <p><a href="./garbage.html"><img src="./images/services/3.jpg" alt="img"></a></p>
+            <p><a href="./contact.html#foto">Фото и видео наших работ</a></p>
+            <p><a href="./garbage.html#review">Отзывы</a></p>
           </div>
         </div>
       </div>
@@ -953,19 +996,19 @@
   </script>
 
 
-  
-<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-<script src="./js/main.js"></script>
-<script src="./js/bootstrap.min.js"></script>
-<script src="./js/init.js"></script>
-<script src="./js/scripts.js"></script>
 
-<script>
-  Fancybox.bind('[data-fancybox="gallery"]', {
-    Thumbs: false,
-    width: 900,
-  });
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/init.js"></script>
+  <script src="./js/scripts.js"></script>
+
+  <script>
+    Fancybox.bind('[data-fancybox="gallery"]', {
+      Thumbs: false,
+      width: 900,
+    });
+  </script>
 
 </body>
 
