--- a/demolition.html
+++ b/demolition.html
@@ -24,104 +24,146 @@
 
 
 <body class="com_content view-article no-layout no-task itemid-101 home">
-
   <div id="maximenuck146-mobile" class="mobilemaximenuck ltr js_menu"
-    style="position: fixed; overflow: hidden auto; z-index: 100000; top: 0px; left: 0px; width: 300px; height: 100%; display: none;">
-    <div class="mobilemaximenucktopbar">
-      <div class="mobilemaximenucktitle mobilemaximenuckbackbutton" style="display: none;">Назад</div><span
-        class="mobilemaximenucktitle">Меню</span><span class="mobilemaximenuckclose js_close">×</span>
+  style="position: fixed; overflow: hidden auto; z-index: 100000; top: 0px; left: 0px; width: 300px; height: 100%; display: none;">
+  <div class="mobilemaximenucktopbar">
+    <div class="mobilemaximenucktitle mobilemaximenuckbackbutton" style="display: none;">Назад</div><span
+      class="mobilemaximenucktitle">Меню</span><span class="mobilemaximenuckclose js_close">×</span>
+  </div>
+  <div class="mobilemaximenuckitemwrap acc" style="position: absolute; width: 100%;">
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck level1">
+        <div class="maximenuck_item_mobile acc_header">
+          <span class="mobiletextck">Демонтажные работы</span>
+          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                  fill="#222" opacity="1" data-original="#000000"></path>
+              </g>
+            </svg></i>
+        </div>
+        <div class="maximenuck_body">
+          <a href="./wall.html" class="maximenuck_box_item">Стены (перегородки) </a>
+          <a href="./floor.html#plitka" class="maximenuck_box_item">Плитка </a>
+          <a href="./wall.html#shtukaturka" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+          <a href="./wall.html#oboi" class="maximenuck_box_item">Обои</a>
+          <a href="./floor.html#kraska" class="maximenuck_box_item">Краска </a>
+          <a href="./floor.html" class="maximenuck_box_item">Полы (стяжка) </a>
+          <a href="./floor.html#parket" class="maximenuck_box_item">Паркет (ламинат) </a>
+          <a href="./floor.html#kovrolin" class="maximenuck_box_item">Ковролин </a>
+          <a href="./floor.html#linolium" class="maximenuck_box_item">Линолиум </a>
+          <a href="./ceiling.html" class="maximenuck_box_item">Потолок </a>
+          <a href="./window.html#okna" class="maximenuck_box_item">Окна</a>
+          <a href="./window.html#dveri" class="maximenuck_box_item">Двери</a>
+          <a href="./window.html#santechnika" class="maximenuck_box_item">Сантехника </a>
+          <a href="./window.html#elektrika" class="maximenuck_box_item">Электрика</a>
+          <a href="./window.html#oborudovanie" class="maximenuck_box_item">Оборудование </a>
+          <a href="./window.html#mebel" class="maximenuck_box_item">Мебель </a>
+        </div>
+      </div>
     </div>
-    <div class="mobilemaximenuckitemwrap" style="position: absolute; width: 100%;">
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck level1">
-          <div class="maximenuck_item_mobile">
-            <span class="mobiletextck">Демонтажные работы</span>
-            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-                xml:space="preserve">
-                <g>
-                  <path
-                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                    fill="#222" opacity="1" data-original="#000000"></path>
-                </g>
-              </svg></i>
-          </div>
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck level1">
+        <div class="maximenuck_item_mobile acc_header">
+          <span class="mobiletextck">Снос домов</span>
+          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                  fill="#222" opacity="1" data-original="#000000"></path>
+              </g>
+            </svg></i>
+        </div>
+        <div class="maximenuck_body">
+          <a href="./demolition.html" class="maximenuck_box_item">Дома </a>
+          <a href="./demolition.html#bani" class="maximenuck_box_item">Баня </a>
+          <a href="./demolition.html#sarai" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+          <a href="./demolition.html#krovlay" class="maximenuck_box_item">Кровля </a>
+          <a href="./demolition.html#fundament" class="maximenuck_box_item">Фундамент </a>
+          <a href="./demolition.html#zabor" class="maximenuck_box_item">Заборы </a>
+          <a href="./demolition.html#metalokonstrukcia" class="maximenuck_box_item">Металоконстркуция </a>
         </div>
       </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
-            <span class="mobiletextck">Снос домов</span>
-            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-                xml:space="preserve">
-                <g>
-                  <path
-                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                    fill="#222" opacity="1" data-original="#000000"></path>
-                </g>
-              </svg></i>
-          </div>
+    </div>
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck level1">
+        <div class="maximenuck_item_mobile acc_header">
+          <span class="mobiletextck">Алмазная резка</span>
+          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                  fill="#222" opacity="1" data-original="#000000"></path>
+              </g>
+            </svg></i>
+        </div>
+        <div class="maximenuck_body">
+          <a href="./diamond.html" class="maximenuck_box_item">Алмазная резка </a>
+          <a href="./diamond.html#usilenie" class="maximenuck_box_item">Усиление </a>
+          <a href="./diamond.html#shtroblenie" class="maximenuck_box_item">Штробление </a>
         </div>
       </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
-            <span class="mobiletextck">Алмазная резка</span>
-            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-                xml:space="preserve">
-                <g>
-                  <path
-                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                    fill="#222" opacity="1" data-original="#000000"></path>
-                </g>
-              </svg></i>
-          </div>
+    </div>
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
+            class="mobiletextck">Алмазное бурение</span></a></div>
+    </div>
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
+            class="mobiletextck">Перепланировка</span></a></div>
+    </div>
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck  level1">
+        <div class="maximenuck_item_mobile acc_header">
+          <span class="mobiletextck">Вывоз мусора</span>
+          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                  fill="#222" opacity="1" data-original="#000000"></path>
+              </g>
+            </svg></i>
+        </div>
+        <div class="maximenuck_body">
+          <a href="./garbage.html" class="maximenuck_box_item">Наш автопарк </a>
+          <a href="./garbage.html#fasovka" class="maximenuck_box_item">Фасовка мусора </a>
+          <a href="./garbage.html#spusk" class="maximenuck_box_item">Спуск и погрузка мусора </a>
         </div>
       </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
-              class="mobiletextck">Алмазное бурение</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
-              class="mobiletextck">Перепланировка</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
-            <span class="mobiletextck">Вывоз мусора</span>
-            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-                xml:space="preserve">
-                <g>
-                  <path
-                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                    fill="#222" opacity="1" data-original="#000000"></path>
-                </g>
-              </svg></i>
-          </div>
+    </div>
+    <div class="mobilemaximenuckitem">
+      <div class="maximenuck level1">
+        <div class="maximenuck_item_mobile acc_header">
+          <span class="mobiletextck">Наши работы</span>
+          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+              xml:space="preserve">
+              <g>
+                <path
+                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                  fill="#222" opacity="1" data-original="#000000"></path>
+              </g>
+            </svg></i>
         </div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck  level1">
-          <div class="maximenuck_item_mobile">
-            <span class="mobiletextck">Наши работы</span>
-            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-                xml:space="preserve">
-                <g>
-                  <path
-                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                    fill="#222" opacity="1" data-original="#000000"></path>
-                </g>
-              </svg></i>
-          </div>
+        <div class="maximenuck_body">
+          <a href="./contact.html#foto" class="maximenuck_box_item">Фото</a>
+          <a href="./contact.html#video" class="maximenuck_box_item">Видео </a>
+          <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
+          <a href="./contact.html#contact" class="maximenuck_box_item">Контакты </a>
         </div>
       </div>
     </div>
   </div>
+</div>
   <div id="maximenuck146-mobilebarmaximenuck" class="mobilebarmaximenuck ltr" style="position:absolute"><span
       class="mobilebarmenutitleck">Меню</span>
     <div class="mobilebuttonmaximenuck js_button">≡</div>
@@ -3474,7 +3516,7 @@
     </div>
   </section>
 
-  <section class="review">
+  <section class="review" id="review">
     <div class="container">
       <h2>Отзывы клиентов</h2>
       <table class="review">
