--- a/demolition.html
+++ b/demolition.html
@@ -112,11 +112,11 @@
       </div>
     </div>
     <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
+      <div class="maximenuck  level1 "><a href="./diamond.html#burenie" class="maximenuck "><span
             class="mobiletextck">Алмазное бурение</span></a></div>
     </div>
     <div class="mobilemaximenuckitem">
-      <div class="maximenuck level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
+      <div class="maximenuck level1 "><a href="./redevelopment.html" class="maximenuck "><span
             class="mobiletextck">Перепланировка</span></a></div>
     </div>
     <div class="mobilemaximenuckitem">
